--- a/http/templates/_layouts/default.html
+++ b/http/templates/_layouts/default.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <title>Quantastic</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/css/default.css" />
     <script src="/js/main.js"></script>
   </head>
   <body>
-    <h1>Quantastic</h1>
-    {{template "content" .}}
-  </body>
+    <div class="wrapper">
+      <header>
+        <h1>Quantastic</h1>
+      </header>
+      {{template "content" .}}
+    </body>
+    </div>
 </html>
