--- a/http/templates/time/index.html
+++ b/http/templates/time/index.html
@@ -1,13 +1,17 @@
-<h2>Time</h2>
-<table>
-  <tr>
-    <th>Category</th>
-    <th>Budget</th>
-  </tr>
-  {{range .}}
-    <tr>
-      <td>{{ .Name }}</td>
-      <td>{{ .Note }}</td>
-    </tr>
-  {{end}}
-</table>
+<section class="time">
+  <section>
+    <h2>Time</h2>
+    <table>
+      <tr>
+        <th>Category</th>
+        <th>Budget</th>
+      </tr>
+      {{range .}}
+        <tr>
+          <td>{{ .Name }}</td>
+          <td>{{ .Note }}</td>
+        </tr>
+      {{end}}
+    </table>
+  </section>
+</section>
