--- a/http/static/css/default.css
+++ b/http/static/css/default.css
@@ -1,24 +1,61 @@
+/*
+/* Font Families
+ */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Raleway:400,300,700);
-
 body, html{
-  margin: 0;
-  padding: 0;
+	font-family: 'Lato', Arial, sans-serif;
+}
+/*
+/* Font Sizes
+ */
+h1{font-size: 2.6em}
+h2{font-size: 1.6em}
+h3{font-size: 1.4em}
+h4, li{font-size: 1.2em}
+h5{font-size: 1.0em}
+h6{font-size: 1em}
+/*
+/* Font Colors
+ */
+header{color: #aaa;}
+section{color: #fff;}
+/*
+/* Backgrounds
+ */
+section.time{background: #41ab6b;}
+/*
+ * Margins
+ */
+body, html{margin: 0;}
+h1{margin: 0.6em 0;}
+h2{margin: 0.5em 0;}
+h3{margin: 0.4em 0;}
+h4, li{margin: 0.3em 0;}
+h5{ margin: 0.2em 0; }
+h6{margin: 0.1em 0;}
+/*
+ * Paddings
+ */
+h1, h2, h3, h4, h5, h6, li, ul, ol{padding: 0;}
+body, html{padding: 0;}
+.wrapper > header,
+.wrapper > section{
+  padding: 2em;
+}
+/*
+ * List Style
+ */
+li{list-style: none;}
+/*
+ * Layout
+ */
+body, html{
   height: 100%;
   overflow: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-}
-
 .wrapper{
   height: 100%;
-}
-
-.wrapper > header,
-.wrapper > section{
-  padding: 20px;
 }
 
 .wrapper > section{
@@ -32,23 +69,9 @@ h1, h2, h3, h4, h5, h6 {
   width: 960px;
 }
 
-
-section,
-header {
-	font-family: 'Lato', Arial, sans-serif;
-}
-
 header h1 {
-  color: #aaa;
-  font-size: 2.625em;
   line-height: 1.3;
   font-weight: 300;
+  margin: 0;
 }
 
-section {
-  color: #fff;
-}
-
-section.time{
-  background: #41ab6b;
-}
