--- a/http/static/css/default.css
+++ b/http/static/css/default.css
@@ -1,4 +1,11 @@
 /*
+ * This style sheet is a bit peculiar. Every css property that is modified gets
+ * its own section. The idea is that this will reduce duplication, increase
+ * consistency and also help with quickly performing tasks like "change font
+ * color". So far it seems to be working well.
+ */
+
+/*
 /* Font Families
  */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Raleway:400,300,700);
@@ -33,45 +40,23 @@ h3{margin: 0.4em 0;}
 h4, li{margin: 0.3em 0;}
 h5{ margin: 0.2em 0; }
 h6{margin: 0.1em 0;}
+header, section > section{margin: 0 auto;}
 /*
  * Paddings
  */
 h1, h2, h3, h4, h5, h6, li, ul, ol{padding: 0;}
 body, html{padding: 0;}
-.wrapper > header,
-.wrapper > section{
-  padding: 2em;
-}
+.wrapper > header{padding: 0 1em;}
+.wrapper > section{padding: 1em 1em 0 1em;}
 /*
- * List Style
+ * Heights
+ */
+body, html, .wrapper, .wrapper > section{height: 100%;}
+/*
+ * Widths
+ */
+section > section, header{width: 960px;}
+/*
+ * List Styles
  */
 li{list-style: none;}
-/*
- * Layout
- */
-body, html{
-  height: 100%;
-  overflow: auto;
-}
-
-.wrapper{
-  height: 100%;
-}
-
-.wrapper > section{
-  height: 100%;
-  max-height: 100%;
-}
-
-.wrapper > section > section,
-.wrapper > header {
-  margin: 0 auto;
-  width: 960px;
-}
-
-header h1 {
-  line-height: 1.3;
-  font-weight: 300;
-  margin: 0;
-}
-
