--- a/http/templates/time/index.html
+++ b/http/templates/time/index.html
@@ -1,13 +1,10 @@
 <section class="time">
-  <section>
+  <div>
     <h2>Time</h2>
-    <ul>
-
-    </ul>
     <ol>
       {{range .}}
       <li>{{ .Name }} {{ .Note }}</li>
       {{end}}
     </ol>
-  </section>
+  </div>
 </section>
