--- a/http/templates/_layouts/default.html
+++ b/http/templates/_layouts/default.html
@@ -8,7 +8,7 @@
     <script src="/js/main.js"></script>
   </head>
   <body>
-    <div class="wrapper">
+    <div>
       <header>
         <h1>Quantastic</h1>
       </header>
