refactor: move things around

--- a/server/http/templates/_layouts/default.html
+++ b/server/http/templates/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>Quantastic</title>
 
     <link rel="stylesheet" type="text/css" href="/css/default.css" />
-    <script src="/js/main.js"></script>
+    <script type="text/javascript" src="/js/d3.js"></script>
   </head>
   <body>
     <div>
@@ -13,6 +13,7 @@
         <h1>Quantastic</h1>
       </header>
       {{template "content" .}}
+      <script type="text/javascript" src="/js/default.js"></script>
     </body>
-    </div>
+  </div>
 </html>
