--- a/server/http/templates/css.html
+++ b/server/http/templates/css.html
@@ -18,5 +18,79 @@
 
     <h6>Headline 6</h6>
     <p>In a quam ac diam facilisis posuere. Vivamus tempor et elit ac bibendum. Vivamus nec feugiat nisl. Phasellus eget ornare nulla. Praesent in fringilla nisi. Mauris ullamcorper posuere eros, eget pretium diam cursus sed. Praesent posuere ligula eget leo consequat, ac convallis enim facilisis. Mauris gravida, odio vitae tempus dignissim, tellus quam facilisis diam, ac condimentum sem lacus nec urna. Nulla mattis leo eget arcu pharetra hendrerit.</p>
+
+    <h2>Hierarchy</h2>
+    <ul class="hierarchy">
+      <li>Level 1</li>
+      <li>Level 2</li>
+      <li>Level 3</li>
+      <li>Level 4</li>
+      <li>Level 5</li>
+      <li>Level 6</li>
+    </ul>
+
+    <h2>Table</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Row</th>
+          <th>Lorem</th>
+          <th>ipsum</th>
+          <th>dolor</th>
+          <th>sit</th>
+          <th>amet</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>consectetur</td>
+          <td>adipiscing</td>
+          <td>Nulla</td>
+          <td>fringilla</td>
+          <td>commodo</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>arcu</td>
+          <td>nec</td>
+          <td>consequat</td>
+          <td>In</td>
+          <td>elit</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>nunc</td>
+          <td>dignissim</td>
+          <td>ut</td>
+          <td>massa</td>
+          <td>ut</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>posuere</td>
+          <td>hendrerit</td>
+          <td>libero</td>
+          <td>Nulla</td>
+          <td>ullamcorper</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>pellentesque</td>
+          <td>risus</td>
+          <td>sed</td>
+          <td>tempor</td>
+          <td>odio</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>commodo</td>
+          <td>Nulla</td>
+          <td>in</td>
+          <td>metus</td>
+          <td>lacus</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </section>
