--- a/server/http/templates/time/index.html
+++ b/server/http/templates/time/index.html
@@ -1,5 +1,5 @@
 {{define "chain"}}
-  <ol class="hierarchy">
+  <ol class="chain">
     {{range .Chain}}
       {{if not .Root}}
         <li>{{ .Name }}</li>
