--- a/client/css/main.css
+++ b/client/css/main.css
@@ -13,7 +13,7 @@
 /*
  * Font Families
  */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Raleway:400,300,700);
+/*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Raleway:400,300,700);*/
 body, html{
 	font-family: 'Lato', Arial, sans-serif;
 }
